manifest/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
  labels:
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp-container
          image: imhshekhar47/go-react:v1 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-service 
spec:
  selector:
    app: goapp
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingree
  annotations:
    nginx.org/lb-method: round_robin
spec:
  rules:
  - host: localhost.kube
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: goapp-service
            port:
              number: 8080
